force-app/main/default/objects/Knowledge__kav/fields/Chat_Answer__c.field-meta.xml
<CustomField>
    <fullName>Chat_Answer__c</fullName>
    <description>short answer available from live agent knowledge search</description>
    <label>Chat Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>