force-app/main/default/objects/Knowledge__kav/fields/Video__c.field-meta.xml
<CustomField>
    <fullName>Video__c</fullName>
    <label>Video</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>