force-app/main/default/objects/Knowledge__kav/listViews/Apple.listView-meta.xml
<ListView>
    <fullName>Apple</fullName>
    <booleanFilter>1 or 2 or 3</booleanFilter>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ABSTRACT</field>
        <operation>contains</operation>
        <value>apple</value>
    </filters>
    <filters>
        <field>ABSTRACT</field>
        <operation>contains</operation>
        <value>phone</value>
    </filters>
    <filters>
        <field>TITLE</field>
        <operation>contains</operation>
        <value>iPhone</value>
    </filters>
    <label>Phone</label>
</ListView>