force-app/main/default/objects/Knowledge__kav/listViews/Internet.listView-meta.xml
<ListView>
    <fullName>Internet</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ABSTRACT</field>
        <operation>contains</operation>
        <value>Internet</value>
    </filters>
    <filters>
        <field>ABSTRACT</field>
        <operation>contains</operation>
        <value>router</value>
    </filters>
    <label>Internet</label>
</ListView>