force-app/main/default/objects/Knowledge__kav/listViews/TV.listView-meta.xml
<ListView>
    <fullName>TV</fullName>
    <booleanFilter>1 or 2</booleanFilter>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ABSTRACT</field>
        <operation>contains</operation>
        <value>tv</value>
    </filters>
    <filters>
        <field>ABSTRACT</field>
        <operation>contains</operation>
        <value>television</value>
    </filters>
    <label>TV</label>
</ListView>